Fixed text overflow UI bug (#1398)

--- a/src/backend/_scss/application.scss
+++ b/src/backend/_scss/application.scss
@@ -1788,6 +1788,8 @@ a.skip:hover {
   position: absolute;
   border: 1px solid $gray-extra-dark;
   width: 100%;
+  line-height: 120%;
+  font-weight: bold;
   word-wrap: break-word;
 }
 
